--- a/attention.html
+++ b/attention.html
@@ -3,7 +3,7 @@
 
 <head>
 
-  <title>非常事態発生っ | ProjectN</title>
+  <title>非常事態発生 | ProjectN</title>
   <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
   <meta name="viewport" content="width=device-width,initial-scale=1">
   <link rel="shortcut icon" href="assets/img/favicon.ico">
