--- a/final.html
+++ b/final.html
@@ -1,9 +1,9 @@
 <!DOCTYPE html>
 <html lang="ja">
-  
+
 <head>
 
-  <title>スマートフォンからの脱出 | ProjectN</title>
+  <title>脱出成功！ | ProjectN</title>
   <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
   <meta name="viewport" content="width=device-width,initial-scale=1">
   <link rel="shortcut icon" href="https://mioyuki.github.io/Alfa-yoyogi-39/assets/img/favicon.ico">
@@ -16,20 +16,38 @@
   <div id="all">
 
     <div id="title">
-      <a href="https://mioyuki.github.io/Alfa-yoyogi-39/"><img src="https://mioyuki.github.io/Alfa-yoyogi-39/assets/img/tlogo.png" class="rogo" alt="YOYOGI39"></a>
+      <img src="assets/img/tlogo.png" class="rogo" alt="YOYOGI39">
+      <br><br>
+      <div class="hr"></div>
     </div>
-    <div class="hr"></div>
 
     <div id="text">
-      <br><br>
+      <!-- br><br>
       <img src="https://mioyuki.github.io/Alfa-yoyogi-39/assets/img/timg.png" class="toplogo">
-      <br>
-      <h2>クリアおめでとう！</h2>
-      <h3><a href="index.html" class="btn-flat-border">最初に戻る</a></h3>
+      <br -->
+      <h2>脱出成功！</h2>
+      <h4>
+        暴走したAIに勝利した！<br>
+        最後のロックを解き、<br>
+        無事スマートフォンから脱出することが出来た！<br><br>
+      </h4>
+      <h3><a href="end.html" class="btn-flat-border">その後……？</a></h3>
       <br>
     </div>
 
     <div id=cr>
+      <div class="hr"></div>
+      <br>
+      授業主催： N・S高<br>
+      協力：株式会社SCRAP<br>
+      企画制作：N・S高生<br>
+      <br>
+      「リアル脱出ゲーム」は株式会社SCRAPの登録商標です。
+      <br><br>
+      株式会社SCRAPとN・S高で実施した授業「リアル脱出ゲームの作り方」の一環で<br>
+      生徒が制作したものであり、<br>
+      SCRAPが主催/公認するものではありません。
+      <br><br>
       <div class="hr"></div>
       <br><br>
       © 2021 YOYOGI39
