タイトル変更

--- a/end.html
+++ b/end.html
@@ -3,7 +3,7 @@
 
 <head>
 
-  <title>脱出成功！ | ProjectN</title>
+  <title>その後 | ProjectN</title>
   <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
   <meta name="viewport" content="width=device-width,initial-scale=1">
   <link rel="shortcut icon" href="https://mioyuki.github.io/Alfa-yoyogi-39/assets/img/favicon.ico">
