相対パスに

--- a/end.html
+++ b/end.html
@@ -6,8 +6,8 @@
   <title>その後 | ProjectN</title>
   <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
   <meta name="viewport" content="width=device-width,initial-scale=1">
-  <link rel="shortcut icon" href="https://mioyuki.github.io/Alfa-yoyogi-39/assets/img/favicon.ico">
-  <link rel="stylesheet" href="https://mioyuki.github.io/Alfa-yoyogi-39/assets/css/style.css">
+  <link rel="shortcut icon" href="assets/img/favicon.ico">
+  <link rel="stylesheet" href="assets/css/style.css">
 
 </head>
 
@@ -23,7 +23,7 @@
 
     <div id="text">
       <!-- br><br>
-      <img src="https://mioyuki.github.io/Alfa-yoyogi-39/assets/img/timg.png" class="toplogo">
+      <img src="assets/img/timg.png" class="toplogo">
       <br -->
 
       <h4>
