--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
   <meta property="og:description" content="スマートフォンから脱出せよ">
   <meta property="og:url" content="https://mioyuki.github.io/Alfa-yoyogi-39/">
   <meta property="og:type" content="website">
-  <meta property="og:image" content="assets/img/ogp.jpg">
+  <meta property="og:image" content="assets/img/ogp2.png">
   <meta property="og:image:width" content="1200">
   <meta property="og:image:height" content="630">
   <meta name="twitter:card" content="summary_large_image">
