--- a/quiz.html
+++ b/quiz.html
@@ -40,7 +40,7 @@
 
       <h2>第1問</h2>
       <br><br>
-      <img class="toplogo" src="assets/img/stage.png" alt="main">
+      <img class="toplogo" src="assets/img/t1.png" alt="1-1Twitter問題">
       <br><br>
 
       <!-- STAGE1問題セクション　ここまで -->
@@ -67,14 +67,14 @@
         <details>
           <summary class="btn-flat-border">第1問 - ヒント</summary>
           <br><br>
-          あああ
+          カタカナに直そう
           <br>
         </details>
         <br>
         <details>
           <summary class="btn-flat-border">第1問 - 解答</summary>
           <br><br>
-          Twitter
+          56
           <br>
         </details>
 
@@ -83,8 +83,23 @@
       <br><br><br>
 
       <h2>第2問</h2>
-      <br><br><br>
-      <img class="toplogo" src="assets/img/stage.png" alt="main">
+      <br><br>
+
+      <h1>
+        R8 → 2026
+        <br>
+        R1 → 2019
+        <br>
+        H13 → 2001
+        <br>
+        H18 → ????
+        <br>
+      </h1>
+
+      <!-- img class="toplogo" src="assets/img/t2.png" alt="1-2Twitter問題" -->
+
+      
+
       <br><br>
 
       <!-- STAGE1問題セクション　ここまで -->
@@ -112,14 +127,17 @@
         <details>
           <summary class="btn-flat-border">第2問 - ヒント</summary>
           <br><br>
-          あああ
+          4桁の数字の後に“年”を付けよう
+          <br><br>
+          <img class="toplogo" src="assets/img/t2h.png" alt="1-2Twitterヒント">
+
           <br>
         </details>
         <br>
         <details>
           <summary class="btn-flat-border">第2問 - 解答</summary>
           <br><br>
-          Twitter
+          2006
           <br>
         </details>
 
