--- a/quiz.html
+++ b/quiz.html
@@ -230,7 +230,7 @@
           <details>
             <summary class="btn-flat-border">第1問 - ヒント</summary>
             <br><br>
-            <img class="toplogo nazo" src="assets/img/y1h.png" alt="2-1YouTubeヒント">
+            <img class="toplogo" src="assets/img/y1h.png" alt="2-1YouTubeヒント">
             <br>
           </details>
           <br>
