暴走AIメッセージをいい感じに

--- a/quiz.html
+++ b/quiz.html
@@ -322,10 +322,12 @@
 
         <!-- STAGE3問題セクション　ここから -->
 
+        <br>
+
         <h3>
           全てのロックを解除し無事脱出……？
           <br><br>
-          「……この私が、素直にそうさせると思いましたか？」
+          <span class="red">「……この私が、素直にそうさせると思いましたか？」</span>
           <br><br>
           暴走したAIが立ち塞がってきた。<br>
           AIを倒し、今度こそ脱出しよう。
