--- a/attention.html
+++ b/attention.html
@@ -30,7 +30,9 @@
       <h3>無事にスマホ内部に潜入が出来たか…と思った矢先に、<br>
         なんと、案内AIが暴走しスマホ内に閉じ込められてしまった。<br>
         前に進もうにも、順路にはロックが掛かっており進めない。<br>
-        どうにかしてロックを解き、スマートフォンから脱出しよう……</h3><br>
+        どうにかしてロックを解き、スマートフォンから脱出しよう……<br><br>
+        <span class="red">「できる物ならやってみて下さい。この"スマートフォン"という電子の迷宮からの脱出を」</span>
+      </h3><br>
 
       <img src="assets/img/timg.png" class="toplogo" alt="スマホカラダッシュツセヨ">
       <br><br><br><br>
